--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
-<h1>{{nombre|titlecase}}</h1>
-<h1>{{ valor |number}}</h1>
-<button class="btn btn-primary" (click)="MostrarNombre()">Mostrar en Consola</button>
+<div class="text-layout">
+    <h1>{{nombre|titlecase}}</h1>
+    <h1>{{ valor |number}}</h1>
+</div>
+
+<button pButton type="button" (click)="MostrarNombre()" label="Mostrar Nombre"></button>
