--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+/* Referencia en "node_modules\primeng\resources\themes\arya-purple\theme.css" */
+html,body{
+    margin: 10px;
+    background-color: var(--surface-a);
+    font-family: var(--font-family);
+}
+.text-layout{
+    color: var(--text-color);
+}
