MenuBar con PrimeNg

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,22 @@
-<div class="text-layout">
-    <h1>{{nombre|titlecase}}</h1>
-    <h1>{{ valor |number}}</h1>
+<app-menu> </app-menu>
+
+<!-- 
 </div>
 
-<button pButton type="button" (click)="MostrarNombre()" label="Mostrar Nombre"></button>
+<button pButton type="button" (click)="MostrarNombre()" label="Mostrar Nombre" icon="pi pi-apple" iconPos="right">
+</button>
+
+<p-card [header]="nombre | titlecase" subheader="Card SubCabecera" [style]="{width: '360px'}" styleClass="p-card-shadow">
+    <ng-template pTemplate="header">
+        <img alt="Card" src="http://primefaces.org/primeng/assets/showcase/images/usercard.png">
+    </ng-template>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore sed consequuntur error repudiandae numquam
+        deserunt
+        quisquam repellat libero asperiores earum nam nobis, culpa ratione quam perferendis esse, cupiditate neque quas!
+    </p>
+    <ng-template pTemplate="footer">
+        <p-button label="Guardar" icon="pi pi-check"></p-button>
+        <p-button label="Cancelar" icon="pi pi-times" styleClass="p-button-secondary" [style]="{'margin-left': '.5em'}">
+        </p-button>
+    </ng-template>
+</p-card> -->
