--- a/src/styles.css
+++ b/src/styles.css
@@ -2,7 +2,7 @@
 /* Referencia en "node_modules\primeng\resources\themes\arya-purple\theme.css" */
 html,body{
     margin: 10px;
-    background-color: var(--surface-a);
+    background-color: var(--surface-b);
     font-family: var(--font-family);
 }
 .text-layout{
