--- a/src/app/shared/menu/menu.component.html
+++ b/src/app/shared/menu/menu.component.html
@@ -1,1 +1,6 @@
-<p-menubar [model]="items"></p-menubar>
+<p-menubar [model]="items">
+    <!-- Para poder poner el icono al inicio
+         <ng-template pTemplate="start"> -->
+        <img src="./favicon.ico">
+  <!--   </ng-template> -->
+</p-menubar>
