Uso de PrimeFlex npm install primeflex@2.0.0 --save

--- a/src/app/ventas/pages/basicos/basicos.component.html
+++ b/src/app/ventas/pages/basicos/basicos.component.html
@@ -1,1 +1,19 @@
-<p>basicos works!</p>
+<div class="text-layout"><!-- Esa clase la definimos en el css, es propia -->
+    <h1>pipes basicos</h1>
+    <p>Pipes incluidos en Angular - Usualmente en Common Module</p>
+</div>
+
+<div class="text-layout">
+
+<div class="p-grid">
+    <div class="p-col-4">
+        <p-card header="uppercase"></p-card>
+    </div>
+    <div class="p-col-4">
+        <p-card header="lowercase"></p-card>
+    </div>
+    <div class="p-col-4">
+        <p-card header="tittlecase"></p-card>
+    </div>
+</div>
+</div>
