Pipes de porcentaje y decimales.

--- a/src/app/ventas/pages/basicos/basicos.component.html
+++ b/src/app/ventas/pages/basicos/basicos.component.html
@@ -23,7 +23,7 @@
         <div class="p-col-4">
             <p-card header="tittlecase" [subheader]="cDefinicionTittle | titlecase">
                 <p>Valor: "{{cDefinicionTittle}}";<br> Código:</p>
-                <code> [subheader] = "cDefinicionTittle | titlecase" </code>
+                <code> [subheader] = "cDefinicion | titlecase" </code>
             </p-card>
         </div>
     </div>
