--- a/src/app/ventas/pages/no-comunes/no-comunes.component.html
+++ b/src/app/ventas/pages/no-comunes/no-comunes.component.html
@@ -1,1 +1,20 @@
-<p>no-comunes works!</p>
+<div class="text-layout">
+    <!-- Esa clase la definimos en el css, es propia -->
+    <h1>Pipes No Comunes</h1>
+    <p>Pipes incluidos en Angular - Usualmente en Common Module, estos Pipes
+        NO MODIFICAN al valor de la variable, solo lo transforman visualmente </p>
+</div>
+
+<div class="text-layout">
+    <div class="p-grid">
+        <div class="p-col p-md-6 p-sm-9">
+            <p-fieldset legend="i18nSelect Pipe" [toggleable]="true">
+                Content
+            </p-fieldset>
+        </div>
+        <div class="p-col p-md-6 p-sm-9">
+            <p-fieldset legend="i18nPlural Pipe" [toggleable]="true">
+                Content
+            </p-fieldset>
+        </div>
+</div>
