--- a/src/app/ventas/pages/no-comunes/no-comunes.component.html
+++ b/src/app/ventas/pages/no-comunes/no-comunes.component.html
@@ -9,12 +9,14 @@
     <div class="p-grid">
         <div class="p-col p-md-6 p-sm-9">
             <p-fieldset legend="i18nSelect Pipe" [toggleable]="true">
-                Content
+                Saludos {{cNombre}}, es un placer 
+                {{cGenero | i18nSelect:invitacionMap }} 
+                a nuestro evento
             </p-fieldset>
         </div>
         <div class="p-col p-md-6 p-sm-9">
             <p-fieldset legend="i18nPlural Pipe" [toggleable]="true">
-                Content
+                Actualmente {{clientes.length | i18nPlural:clientesMap}}
             </p-fieldset>
         </div>
 </div>
