--- a/src/app/ventas/pages/no-comunes/no-comunes.component.html
+++ b/src/app/ventas/pages/no-comunes/no-comunes.component.html
@@ -9,14 +9,64 @@
     <div class="p-grid">
         <div class="p-col p-md-6 p-sm-9">
             <p-fieldset legend="i18nSelect Pipe" [toggleable]="true">
-                Saludos {{cNombre}}, es un placer 
-                {{cGenero | i18nSelect:invitacionMap }} 
-                a nuestro evento
+                <p>
+                    Saludos {{cNombre}}, es un placer
+                    {{cGenero | i18nSelect:invitacionMap }}
+                    a nuestro evento
+                </p>
+                <p-button (click)="CambiarGenero()" label="Cambiar Persona" icon="pi pi-history"></p-button>
             </p-fieldset>
         </div>
+
         <div class="p-col p-md-6 p-sm-9">
             <p-fieldset legend="i18nPlural Pipe" [toggleable]="true">
-                Actualmente {{clientes.length | i18nPlural:clientesMap}}
+                <p>
+                    Actualmente {{clientes.length | i18nPlural:clientesMap}}
+                </p>
+                <p-button (click)="RestarCliente()" label="Restar Cliente" icon="pi pi-caret-down"></p-button>
             </p-fieldset>
         </div>
+
+        <div class="p-col p-md-6 p-sm-9">
+            <p-fieldset legend="Slice Pipe" [toggleable]="true">
+                <p>
+                    Original
+                </p>
+                <pre>{{clientes }}</pre>
+
+                <b>slice:0</b>
+                <pre> {{clientes | slice:0}} </pre>
+
+                <b>slice:1:3</b>
+                <pre> {{clientes | slice:1:3 }} </pre>
+            </p-fieldset>
+        </div>
+
+        <div class="p-col p-md-6 p-sm-9">
+            <p-fieldset legend="JSON Pipe" [toggleable]="true">
+                <pre>{{heroes | json}}</pre>
+            </p-fieldset>
+        </div>
+
+        <div class="p-col p-md-6 p-sm-9">
+            <p-fieldset legend="KeyValue Pipe" [toggleable]="true">
+                <ul>
+                    <li *ngFor="let item of persona |keyvalue">
+                        <b>{{item.key}} : </b> {{ item.value }}
+                    </li>
+                </ul>
+            </p-fieldset>
+        </div>
+
+        <div class="p-col p-md-6 p-sm-9">
+            <p-fieldset legend="Async Pipe" [toggleable]="true">
+
+                <pre>{{miObservable | async}}</pre>
+                <pre *ngIf="!(valorPromesa | async)">Resolviendo promesa</pre>
+                <pre> {{valorPromesa | async}} </pre>
+
+            </p-fieldset>
+        </div>
+
+    </div>
 </div>
