--- a/src/app/ventas/pages/ordenar/ordenar.component.html
+++ b/src/app/ventas/pages/ordenar/ordenar.component.html
@@ -1,1 +1,4 @@
-<p>ordenar works!</p>
+<div class="text-layout"><!-- Esa clase la definimos en el css, es propia -->
+    <h1>Pipes personalizados</h1>
+    <p>Pipes creados por {{'nosotros' | mayusculas:true }} </p>
+</div>
