--- a/src/app/ventas/pages/ordenar/ordenar.component.html
+++ b/src/app/ventas/pages/ordenar/ordenar.component.html
@@ -1,4 +1,5 @@
 <div class="text-layout"><!-- Esa clase la definimos en el css, es propia -->
     <h1>Pipes personalizados</h1>
-    <p>Pipes creados por {{'nosotros' | mayusculas:true }} </p>
+    <p>Pipes creados por {{'nosotros' | mayusculas:lCambio }} </p>
+    <button pButton type="button" label="Cambio" (click)="Cambiar()"></button>
 </div>
