--- a/src/app/ventas/pages/ordenar/ordenar.component.html
+++ b/src/app/ventas/pages/ordenar/ordenar.component.html
@@ -12,20 +12,20 @@
     <div class="p-toolbar-group-right">
         <button pButton type="button" label="Cambio" (click)="Cambiar()" class="p-mr-1"></button>
 
-        <button pButton pRipple type="button" icon="pi pi-sort" (click)="Ordenar()" label="Ordenar por nombre"
+        <button pButton pRipple type="button" icon="pi pi-sort" (click)="Ordenar('nombre')" label="Ordenar por nombre"
             class="p-mr-1 p-button-info"></button>
 
-        <button pButton pRipple type="button" icon="pi pi-sort" label="Vuela"
+        <button pButton pRipple type="button" icon="pi pi-sort" (click)="Ordenar('vuela')" label="Vuela"
             class="p-mr-1 p-button-success"></button>
 
-        <button pButton pRipple type="button" icon="pi pi-sort" label="Por color"
+        <button pButton pRipple type="button" icon="pi pi-sort" (click)="Ordenar('color')" label="Por color"
             class="p-mr-1 p-button-warning"></button>
     </div>
 </p-toolbar>
 
 <div class="p-grid">
     <div class="p-col p-mt-3">
-        <p-table [value]="Heroes | ordenar" responsiveLayout="scroll">
+        <p-table [value]="Heroes| ordenar:cOrdenarPor" responsiveLayout="scroll">
             <ng-template pTemplate="header">
                 <tr>
                     <th>Nombre</th>
@@ -43,3 +43,25 @@
         </p-table>
     </div>
 </div>
+
+<div class="p-grid">
+    <div class="p-col p-mt-3">
+        <p-table [value]="Heroes | slice:0" responsiveLayout="scroll">
+            <ng-template pTemplate="header">
+                <tr>
+                    <th pSortableColumn="nombre">Nombre <p-sortIcon field="nombre"></p-sortIcon></th>
+                    <th pSortableColumn="vuela">Vuela <p-sortIcon field="vuela"></p-sortIcon></th>
+                    <th pSortableColumn="color">Color <p-sortIcon field="color"></p-sortIcon></th>
+                </tr>
+            </ng-template>
+            <ng-template pTemplate="body" let-heroe>
+                <tr>
+                    <td>{{heroe.nombre}}</td>
+                    <td>{{heroe.vuela | vuela | titlecase}}</td>
+                    <td>{{heroe.color}}</td>
+                </tr>
+            </ng-template>
+        </p-table>
+    </div>
+</div>
+
